2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DefaultKeyedValues.java
    (removeValue): Always rebuild index,
    * source/org/jfree/data/DefaultKeyedValues2D.java
    (removeColumn(Comparable)): Added argument checks, and protect against
    rows not containing the specified key,
    * tests/org/jfree/data/category/junit/DefaultCategoryDatasetTests.java
    (testBug1835955): New method,
    * tests/org/jfree/data/junit/DefaultKeyedValues2DTests.java
    (testRemoveColumnByKey): New method,
    * tests/org/jfree/data/junit/DefaultKeyedValuesTests.java
    (testGetIndex2): New method.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

    Fix for bug 1832432:
    * source/org/jfree/data/time/TimeSeries.java
    (clone): Reimplemented.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/DatasetRenderingOrder.java
	(hashCode): Implemented,
	* source/org/jfree/chart/plot/DialShape.java
	(hashCode): Likewise,
	* source/org/jfree/chart/plot/PlotOrientation.java
	(hashCode): Likewise,
	* source/org/jfree/chart/plot/SeriesRenderingOrder.java
	(hashCode): Likewise.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/DateAxis.java
	(previousStandardDate): Return dates already fetched.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/CategoryAxis.java
	(equalPaintMaps): Use entrySet rather than keySet.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/PieLabelRecord.java
	(equals): Implemented.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/Outlier.java
	(equals): Implemented.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
	(shapesFilled): Deprecated,
	(getShapesFilled): Likewise,